fix: update sound playback method in TravelHandler and improve heat capacity calculation in FissionReactorMachine